--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
-En construcción
+---
+title: Cómo debatir
+description: Normas básicas para debatir cualquier tema
+author: Jorge Barata
+---
+<!doctype html>
+<html lang="en">
+
+	<head>
+		<meta charset="utf-8">
+
+		<title>{{ pagetitle }}</title>
+
+		<meta name="description" content="{{ page.description }}">
+		<meta name="author" content="{{ page.author }}">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
+
+        <style type="text/css">
+            .reveal button {
+                color: #ffffff;
+                background: #264c66;
+                border: 0;
+                border-radius: 28px;
+                font-size: 20px;
+                padding: 10px 20px 10px 20px;
+                cursor: pointer;
+            }
+
+            .reveal button:hover,
+            .reveal button:focus {
+                background: #74a7cb;
+            }
+            footer {
+                position: absolute;
+                bottom: 0%;
+                left: 0%;
+            }
+        </style>
+
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
+	</head>
+
+	<body>
+
+		<div class="reveal">
+			<!-- Any section element inside of this container is displayed as a slide -->
+			<div class="slides">
+                <section>
+                    <h1>{{ page.title }}</h1>
+                    <h3>{{ page.description }}</h3>
+                    <p>¿Preparado?</p>
+                    <button class="navigate-next">Empezar</button>
+                </section>
+                <section>
+
+                    <section>
+                        ¿Puedes concebir un argumento que cambie tu punto de vista sobre este asunto?
+                        {% include choices.html %}
+                    </section>
+
+                    <section>
+                        Si se demuestra que uno de tus argumentos es erróneo, ¿dejarás de utilizarlo?
+                        No solo conmigo, sino con todo el mundo.
+                        {% include choices.html %}
+                    </section>
+
+                    <section>
+                        ¿Estás preparado para acatar los principios básicos de la razón al discutir este asunto?
+                        {% include choices.html %}
+                    </section>
+
+                    <section id="success">
+                      Esto es un debate.
+                    </section>
+				</section>
+
+                <section id="fail">
+                  Esto no es un debate.
+                </section>
+
+			</div>
+
+		</div>
+        <footer>
+            <button onclick="Reveal.toggleOverview()">Mapa</button>
+            <a href="https://github.com/jorgebg/comodebatir.com">Colabora</a>
+        </footer>
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
+
+		<script>
+
+			// Full list of configuration options available at:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: false,
+				progress: false,
+				history: true,
+				center: true,
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
+                keyboard: false,
+			});
+		</script>
+
+	</body>
+</html>
