--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ author: Jorge Barata
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/sky.css" id="theme">
+		<link rel="stylesheet" href="reveal.js/css/reveal.css">
+		<link rel="stylesheet" href="reveal.js/css/theme/sky.css" id="theme">
 
         <style type="text/css">
             .reveal button {
@@ -45,7 +45,7 @@ author: Jorge Barata
         </style>
 
 		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
+		<script src="reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 
@@ -94,8 +94,8 @@ author: Jorge Barata
             <button onclick="Reveal.toggleOverview()">Mapa</button>
             <a href="https://github.com/jorgebg/comodebatir.com">Colabora</a>
         </footer>
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+		<script src="reveal.js/lib/js/head.min.js"></script>
+		<script src="reveal.js/js/reveal.js"></script>
 
 		<script>
 
