update end slides ids

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ author: Jorge Barata
                         {% include choices.html %}
                     </section>
 
-                    <section id="success">
+                    <section id="aprobado">
                       Esto es un debate.
                     </section>
 				</section>
 
-                <section id="fail">
+                <section id="suspenso">
                   Esto no es un debate.
                 </section>
 
